--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
 			<build>
 				<resources>
 					<resource>
-						<directory>${project.basedir}/src/main/resources</directory>
+						<directory>${project.basedir}/src/main/production/resources</directory>
 						<excludes>
 							<exclude>**/*.java</exclude>
 						</excludes>
