--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,16 +13,38 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
+	<!-- ContextLoaderListener가 root Context를 생성한다. -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+	<!-- ContextConfigLocation 설정 안할 시 설정 내용은 default : /WEB-INF/applicationContext.xml을 참조한다. -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
+	
+	<!-- Dispatcher Server(Front Controller) -->
+	<servlet>
+		<servlet-name>spring</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+        	<param-name>contextConfigLocation</param-name>
+        	<param-value>/WEB-INF/*-servlet.xml</param-value>
+    	</init-param>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 
 	<!-- Encoding Filter -->
+	<!--  
+		encoding을 지정하고 forceEncoding을 true로 하면 
+		HttpServletRequest, HttpServletResponse 인코딩을 오버라이드하여 셋팅하고 
+		false인 경우 HttpServletRequest만 encoding 지정 값으로 인코딩함 
+	-->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -40,20 +62,6 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	<!-- Dispatcher Server(Front Controller) -->
-	<servlet>
-		<servlet-name>spring</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-        	<param-name>contextConfigLocation</param-name>
-        	<param-value>/WEB-INF/*-servlet.xml</param-value>
-    </init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>spring</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-	
 	<!-- 공통 에러페이지 -->
 	<error-page>
 		<error-code>404</error-code>
@@ -63,10 +71,5 @@
 		<error-code>500</error-code>
 		<location>/WEB-INF/views/error/500.jsp</location>
 	</error-page>
-	
-	
-	
-	
-	
 	
 </web-app>
