--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
 		    <version>2.9.8</version>
 		</dependency>
 		
+		<!-- jackson -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.module</groupId>
+		    <artifactId>jackson-module-parameter-names</artifactId>
+		    <version>2.9.8</version>
+		</dependency>
+		
 		<!-- Logback --> 
 		<dependency>                                    
 			<groupId>org.slf4j</groupId>                
