--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
 			<version>2.4.0</version>
 		</dependency>
 		
+		<!-- postgresql jdbc client -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
+		</dependency>
+		
 		<!-- Common DBCP -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
